# aoc-2023

./: aoc_2023.opam  dune-project
day_01/: day01p1.ml  day01p2.ml  dune
day_02/: day02p1.ml  day02p2.ml  day2magic_sorting.ml  dune
day_03/: day03p1.ml  day03p2.ml  dune
day_04/: day04p1.ml  day04p2.ml  dune
day_05/: day05p1.ml  day05p1_parser.ml  day05p2.ml  dune
day_06/: day06p1.ml  day06p2.ml  dune
lib/: ansi.ml  extensions.ml  input.ml
