(lang dune 3.12)

(name aoc_2023)

(generate_opam_files true)

(source
 (github elteammate/aoc-2023))

(authors "Nikolay Stepanov")

(maintainers "Nikolay Stepanov")

(package
 (name aoc_2023)
 (synopsis "Speedrunning getting burned out with Advent of Code 2023 in OCaml!!!")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
